--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,138 @@
+aiohttp==3.7.4.post0
+aiohttp-retry==2.4.6
+appdirs==1.4.4
+argon2-cffi==21.1.0
+async-timeout==3.0.1
+atpublic==2.3
+attrs==21.2.0
+backcall==0.2.0
+bleach==4.1.0
 certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
 charset-normalizer==2.0.7
+cloudpickle==2.0.0
+colorama==0.4.4
+commonmark==0.9.1
+configobj==5.0.6
+cycler==0.10.0
+debugpy==1.5.1
+decorator==5.1.0
+defusedxml==0.7.1
+dictdiffer==0.9.0
+diskcache==5.2.1
+distro==1.6.0
+dpath==2.0.5
+dulwich==0.20.25
+dvc==2.8.2
+entrypoints==0.3
+flatten-dict==0.4.2
+flufl.lock==6.0
+fsspec==2021.10.1
+ftfy==6.0.3
+funcy==1.16
+future==0.18.2
+gitdb==4.0.9
+GitPython==3.1.24
+grandalf==0.6
 idna==3.3
-numpy==1.21.3
+importlib-resources==5.3.0
+ipykernel==6.4.2
+ipython==7.28.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jedi==0.18.0
+Jinja2==3.0.2
+joblib==1.1.0
+jsonschema==4.1.2
+jupyter==1.0.0
+jupyter-client==7.0.6
+jupyter-console==6.4.0
+jupyter-core==4.8.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
+llvmlite==0.37.0
+mailchecker==4.0.13
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+matplotlib-inline==0.1.3
+mistune==0.8.4
+multidict==5.2.0
+nanotime==0.5.2
+nbclient==0.5.4
+nbconvert==6.2.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.6.3
+notebook==6.4.5
+numba==0.54.1
+numpy==1.20.3
+packaging==21.0
 pandas==1.3.4
+pandocfilters==1.5.0
+parso==0.8.2
+pathspec==0.9.0
+pexpect==4.8.0
+phonenumbers==8.12.35
+pickleshare==0.7.5
+Pillow==8.4.0
+ply==3.11
+prometheus-client==0.11.0
+prompt-toolkit==3.0.21
+psutil==5.8.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pycparser==2.20
+pydot==1.4.2
+pygit2==1.7.0
+Pygments==2.10.0
+pygtrie==2.4.2
+pyparsing==2.4.7
+PyQt5==5.15.5
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.9.0
+pyrsistent==0.18.0
+python-benedict==0.24.3
 python-dateutil==2.8.2
+python-fsutil==0.5.0
+python-slugify==5.0.2
 pytz==2021.3
+PyYAML==6.0
+pyzmq==22.3.0
+qtconsole==5.1.1
+QtPy==1.11.2
 requests==2.26.0
+rich==10.12.0
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
+scikit-learn==1.0
+scipy==1.7.1
+Send2Trash==1.8.0
+shap==0.40.0
+shortuuid==1.0.1
+shtab==1.4.2
 six==1.16.0
+slicer==0.0.7
+smmap==5.0.0
+tabulate==0.8.9
+terminado==0.12.1
+testpath==0.5.0
+text-unidecode==1.3
+threadpoolctl==3.0.0
+toml==0.10.2
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.0
+typing-extensions==3.10.0.2
 urllib3==1.26.7
+voluptuous==0.12.2
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+xgboost==1.5.0
 xlrd==2.0.1
+xmltodict==0.12.0
+yarl==1.7.0
+zc.lockfile==2.0
+zipp==3.6.0
