--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argon2-cffi==21.1.0
 async-timeout==3.0.1
 atpublic==2.3
 attrs==21.2.0
+autopep8==1.6.0
 backcall==0.2.0
 bleach==4.1.0
 certifi==2021.10.8
@@ -59,6 +60,7 @@ matplotlib==3.4.3
 matplotlib-inline==0.1.3
 mistune==0.8.4
 multidict==5.2.0
+mypy-extensions==0.4.3
 nanotime==0.5.2
 nbclient==0.5.4
 nbconvert==6.2.0
@@ -70,6 +72,7 @@ numba==0.54.1
 numpy==1.20.3
 packaging==21.0
 pandas==1.3.4
+pandera==0.7.2
 pandocfilters==1.5.0
 parso==0.8.2
 pathspec==0.9.0
@@ -82,7 +85,9 @@ prometheus-client==0.11.0
 prompt-toolkit==3.0.21
 psutil==5.8.0
 ptyprocess==0.7.0
+pyarrow==5.0.0
 pyasn1==0.4.8
+pycodestyle==2.8.0
 pycparser==2.20
 pydot==1.4.2
 pygit2==1.7.0
@@ -125,11 +130,13 @@ tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.0
 typing-extensions==3.10.0.2
+typing-inspect==0.7.1
 urllib3==1.26.7
 voluptuous==0.12.2
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+wrapt==1.13.2
 xgboost==1.5.0
 xlrd==2.0.1
 xmltodict==0.12.0
